--- a/src/main/resources/templates/receipt.html
+++ b/src/main/resources/templates/receipt.html
@@ -1,93 +1,72 @@
-<!DOCTYPE html
-    PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE HTML>
+<html xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <title>Receipt AlHuda-Baitulmaal</title>
 
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
-
-    <!-- use the font -->
     <style>
-        body {
-            font-family: 'Roboto', sans-serif;
-            font-size: 48px;
-        }
         .logo1{
             position: absolute;
-            left: 7.5em;
-            width: 4%;
+            left: 30.5em;
+            width: 3%;
             top: 9px;
         }
         .logo2{
             position: absolute;
             top: 9px;
-            width: 4%;
-            right: 7.5em;
+            width: 3%;
+            right: 30.5em;
         }
     </style>
 </head>
 
 <body style="margin: 0; padding: 0;">
 
-    <table align="center" border="0" cellpadding="0" cellspacing="0" width="600" style="border: 3px solid black;">
+    <table align="center" border="0" cellpadding="0" cellspacing="0" width="600" style="border: 3px solid black; margin-bottom: 2.5em;" th:each="item, iterStat: ${data}">
         <tr>
             <td align="center" style="border-bottom: 3px solid black;" colspan="2">
-                <img class="logo1" src="./al-huda-logo.png" alt="logo1"/>
-                <p style="font-size: 14px;font-weight: bolder;"> A L - H U D A B A I T U L M A L </p>
+                <img class="logo1" src="../static/images/al-huda-logo.png" alt="logo1"  th:src="@{classpath:static/images/al-huda-logo.png}"/>
+                <p style="font-size: 14px;font-weight: bolder;"> A L - H U D A B A I T U L M A A L </p>
                 <span style="font-size: 12px;font-weight: bolder;">Al-Huda Multipurpose Society, Badnera, Dist
                     Amravati</span>
-                <p style="margin: 0; height: 12px;background-color: black;color: white;width: 53%;font-size: 12px;
+                <p style="margin: 0; height: 12px;background-color: black;color: white;font-size: 12px;
                 font-weight: bolder;">Nazm-e-Ijtemaee
-                    Sadqua, Zakat & I.Sawab Etc.</p>
-                    <img class="logo2" src="./al-huda-logo.png" alt="logo2"/>
+                    Sadqua, Zakat &amp; I.Sawab Etc.</p>
+                    <img class="logo2" src="../static/images/al-huda-logo.png" alt="logo2"  th:src="@{classpath:static/images/al-huda-logo.png}"/>
             </td>
         </tr>
         <tr>
             <td colspan="2"
-                style="font-size: 12px;font-weight: bolder;padding-top: 10px;border-bottom: 3px solid black;">
-                Name :
-                <span>${name}</span>
+                style="font-size: 12px;font-weight: bolder;padding-top: 10px;border-bottom: 3px solid black;" th:text="'Name: ' + ${item.fullName}">
             </td>
         </tr>
         <tr>
             <td style="font-size: 12px;font-weight: bolder;padding-top: 10px;border-bottom: 3px solid black;"
-                colspan="2">
-                the Sum of Rs. : <span>${rupees}</span>
+                colspan="2" th:text="'the Sum of Rs. : ' + ${item.donationAmount}">
             </td>
         </tr>
         <tr>
-            <td style="font-size: 12px;font-weight: bolder;padding-top: 10px;border-bottom: 3px solid black;">
-                by Cash/Cheque/D.D No. <span>${typeOfTransfer}</span>
-
+            <td style="font-size: 12px;font-weight: bolder;padding-top: 10px;border-bottom: 3px solid black;" th:text="'by Cash/Cheque/D.D No.  :  Cash'">
             </td>
             <td
-                style="font-size: 12px;font-weight: bolder;padding-top: 10px;border-bottom: 3px solid black; width: 35%;">
-                Mobile No. : <span>${phoneNumber}</span>
+                style="font-size: 12px;font-weight: bolder;padding-top: 10px;border-bottom: 3px solid black; width: 35%;" th:text="' Mobile No. : ' + ${item.phoneNumber}">
             </td>
         </tr>
         <tr>
-            <td style="font-size: 12px;font-weight: bolder;padding-top: 10px;border-bottom: 3px solid black;">
-                On Account Of : <span>${accountNumber}</span>
+            <td style="font-size: 12px;font-weight: bolder;padding-top: 10px;border-bottom: 3px solid black;" th:text="' On Account Of : '">
             </td>
             <td
-                style="font-size: 12px;font-weight: bolder;padding-top: 10px;border-bottom: 3px solid black; width: 35%;">
-                Date : <span>${date}</span>
+                style="font-size: 12px;font-weight: bolder;padding-top: 10px;border-bottom: 3px solid black; width: 35%;" th:text="'Date : ' + ${item.dateString}">
             </td>
-
         </tr>
         <tr>
-            <td style="font-size: 12px;font-weight: bolder;padding-top: 10px;border-bottom: 3px solid black;">
-                Rs. : <span>${amount}</span>
+            <td style="font-size: 12px;font-weight: bolder;padding-top: 10px;border-bottom: 3px solid black;" th:text="'Rs. : ' + ${item.donationAmount}">
             </td>
             <td
-                style="font-size: 12px;font-weight: bolder;padding-top: 10px;border-bottom: 3px solid black; width: 35%;">
-                No. : <span>${receiptNumber}</span>
+                style="font-size: 12px;font-weight: bolder;padding-top: 10px;border-bottom: 3px solid black; width: 35%;" th:text="'No. : ' + ${item.receiptNumber}">
             </td>
-
         </tr>
         <tr>
             <td style="font-size: 12px;font-weight: bolder;padding-top: 10px;">
@@ -103,3 +82,4 @@
         </tr>
     </table>
 </body>
+</html>
