--- a/src/main/resources/templates/receipt.html
+++ b/src/main/resources/templates/receipt.html
@@ -24,17 +24,17 @@
 
 <body style="margin: 0; padding: 0;">
 
-    <table align="center" border="0" cellpadding="0" cellspacing="0" width="600" style="border: 3px solid black; margin-bottom: 2.5em;" th:each="item, iterStat: ${data}">
+    <table align="center" border="0" cellpadding="0" cellspacing="0" width="650" style="border: 3px solid black; margin-bottom: 35px" th:each="item, iterStat: ${data}">
         <tr>
             <td align="center" style="border-bottom: 3px solid black;" colspan="2">
-                <img class="logo1" src="../static/images/al-huda-logo.png" alt="logo1"  th:src="@{classpath:static/images/al-huda-logo.png}"/>
+                <img class="logo1"  alt="logo1"  th:src="@{classpath:images/al-huda-logo.png}"/>
                 <p style="font-size: 14px;font-weight: bolder;"> A L - H U D A B A I T U L M A A L </p>
                 <span style="font-size: 12px;font-weight: bolder;">Al-Huda Multipurpose Society, Badnera, Dist
                     Amravati</span>
                 <p style="margin: 0; height: 12px;background-color: black;color: white;font-size: 12px;
                 font-weight: bolder;">Nazm-e-Ijtemaee
                     Sadqua, Zakat &amp; I.Sawab Etc.</p>
-                    <img class="logo2" src="../static/images/al-huda-logo.png" alt="logo2"  th:src="@{classpath:static/images/al-huda-logo.png}"/>
+                    <img class="logo2" alt="logo2"  th:src="@{classpath:images/al-huda-logo.png}"/>
             </td>
         </tr>
         <tr>
