--- a/src/main/resources/templates/receipt.html
+++ b/src/main/resources/templates/receipt.html
@@ -9,16 +9,24 @@
     <style>
         .logo1{
             position: absolute;
-            left: 30.5em;
-            width: 3%;
+            left: 35.5em;
+            width: 5%;
             top: 9px;
         }
         .logo2{
             position: absolute;
             top: 9px;
-            width: 3%;
-            right: 30.5em;
+            width: 5%;
+            right: 35.5em;
         }
+        .sign{
+            position: absolute;
+            top:19.5em;
+            width: 6%;
+            z-index: -1;
+            right: 10em;
+        }
+        
     </style>
 </head>
 
@@ -27,14 +35,14 @@
     <table align="center" border="0" cellpadding="0" cellspacing="0" width="650" style="border: 3px solid black; margin-bottom: 35px" th:each="item, iterStat: ${data}">
         <tr>
             <td align="center" style="border-bottom: 3px solid black;" colspan="2">
-                <img class="logo1"  alt="logo1"  th:src="@{classpath:images/al-huda-logo.png}"/>
+                <img class="logo1"  alt="logo1"  th:src="@{src/main/resources/static/images/al-huda-logo.png}"/>
                 <p style="font-size: 14px;font-weight: bolder;"> A L - H U D A B A I T U L M A A L </p>
                 <span style="font-size: 12px;font-weight: bolder;">Al-Huda Multipurpose Society, Badnera, Dist
                     Amravati</span>
                 <p style="margin: 0; height: 12px;background-color: black;color: white;font-size: 12px;
                 font-weight: bolder;">Nazm-e-Ijtemaee
                     Sadqua, Zakat &amp; I.Sawab Etc.</p>
-                    <img class="logo2" alt="logo2"  th:src="@{classpath:images/al-huda-logo.png}"/>
+                    <img class="logo2" alt="logo2"  th:src="@{src/main/resources/static/images/al-huda-logo.png}"/>
             </td>
         </tr>
         <tr>
@@ -78,6 +86,7 @@
             <td
                 style="font-size: 12px;font-weight: bolder;padding-top: 10px;text-align: center;vertical-align: bottom;">
                 <p>Authorized Signature</p>
+                <img class="sign"  alt="Signature" th:src="@{src/main/resources/static/images/signature.jpg}"/>
             </td>
         </tr>
     </table>
