--- a/src/main/resources/templates/receipt.html
+++ b/src/main/resources/templates/receipt.html
@@ -21,10 +21,10 @@
         }
         .sign{
             position: absolute;
-            top:19.5em;
-            width: 6%;
+            top: 1.5em;
+            width: 15%;
             z-index: -1;
-            right: 10em;
+            right: 7.5em;
         }
         
     </style>
@@ -34,7 +34,7 @@
 
     <table align="center" border="0" cellpadding="0" cellspacing="0" width="650" style="border: 3px solid black; margin-bottom: 35px" th:each="item, iterStat: ${data}">
         <tr>
-            <td align="center" style="border-bottom: 3px solid black;" colspan="2">
+            <td align="center" style="border-bottom: 3px solid black;position: relative;" colspan="2">
                 <img class="logo1"  alt="logo1"  th:src="@{src/main/resources/static/images/al-huda-logo.png}"/>
                 <p style="font-size: 14px;font-weight: bolder;"> A L - H U D A B A I T U L M A A L </p>
                 <span style="font-size: 12px;font-weight: bolder;">Al-Huda Multipurpose Society, Badnera, Dist
@@ -84,11 +84,11 @@
                 IFSC : SBIN0004884 <br />
             </td>
             <td
-                style="font-size: 12px;font-weight: bolder;padding-top: 10px;text-align: center;vertical-align: bottom;">
-                <p>Authorized Signature</p>
+                style="font-size: 12px;font-weight: bolder;padding-top: 10px;text-align: center;vertical-align: bottom;position: relative;">
                 <img class="sign"  alt="Signature" th:src="@{src/main/resources/static/images/signature.jpg}"/>
+                <p>Authorized Signature</p>
             </td>
         </tr>
-    </table>
+    </table> 
 </body>
 </html>
